[package]
name = "sortyard"
version = "0.1.0"
edition = "2021"
authors = ["JaydenCJ <aisingioro.kiyon@gmail.com>"]
rust-version = "1.75"
description = "External merge sort for CSV/JSONL bigger than RAM, with typed multi-column keys: numbers, dates and nested JSON paths, spill-to-disk, stable and verbatim."
license = "MIT"
repository = "https://github.com/JaydenCJ/sortyard"
keywords = ["sort", "csv", "jsonl", "external-sort", "cli"]
categories = ["command-line-utilities"]

[dependencies]
# None. sortyard is std-only by design: offline, deterministic, zero supply chain.

[profile.release]
strip = true
lto = true
